--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h1>
 <a name="manual" class="anchor" href="#manual"><span class="octicon octicon-link"></span></a>Manual</h1>
 
-<p>A manual describing command line options and more usage details can be found in the wiki.</p>
+<p>A manual describing command line options and more usage details can be found in the <a href="https://github.com/MalteAppeltauer/JCop/Wiki">Wiki</a>.</p>
       </section>
     </div>
 
