Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
         <h1>
 <a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>JCop is a ​context-oriented programming (COP) extension to the Java programming language. It combines COP features - introduced by its predecessor ContextJ - with new constructs for declarative and event-based layer composition and a first-class event-based context representation.</p>
+<p>JCop is a ​<a href="http://www.hpi.uni-potsdam.de/swa/cop">context-oriented programming</a> (COP) extension to the Java programming language. It combines COP features - introduced by its predecessor <a href="https://www.hpi.uni-potsdam.de/swa/trac/Cop/wiki/ContextJ">ContextJ</a> - with new constructs for declarative and event-based layer composition and a first-class event-based context representation.</p>
 
 <p><strong>Modularization.</strong> Behavioral variations are modularized by layers that can either be defined within classes (layer-in-class) or in dedicated top-level modules (class-in-layer). Layers contain partial method definitions that extend or replace a plain method while their layers are active.</p>
 
 <p><strong>Dynamic Composition.</strong> JCop provides control-flow specific layer composition as known from other COP languages. In addition, it offers declarative composition statements that are specified within context modules and thus combines COP with concepts of aspect-oriented programming.</p>
 
-<h1>
-<a name="manual" class="anchor" href="#manual"><span class="octicon octicon-link"></span></a>Manual</h1>
-
-<p>A manual describing command line options and more usage details can be found in the <a href="https://github.com/MalteAppeltauer/JCop/Wiki">Wiki</a>.</p>
+<p>Find more information in our <a href="https://github.com/MalteAppeltauer/JCop/wiki/JCop">Wiki</a>.</p>
       </section>
     </div>
 
